Added spotlight to licenses

--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -49,6 +49,9 @@ Stopmotion is build using following open source software:
     <li>
         <b>RxKotlin</b>
     </li>
+    <li>
+        <b>Spotlight</b>
+    </li>
 </ul>
 <pre>
     Licensed under the Apache License, Version 2.0 (the "License");
